--- a/Components/header.html
+++ b/Components/header.html
@@ -66,14 +66,14 @@
         </div>
     </nav>
     <div class="mainHeader">
-        <div class="register"><a href="../Pages/register.html"><h2>Register FREE</h2><h3>For Personalized Tips</h3></a></div>
-        <div class="schedule"><a href="../Pages/schedule.html"><h2>SCHEDULE NOW</h2><h3>New Pet Consultation</h3></a></div>
+        <div class="register"><a href="./Pages/register.html"><h2>Register FREE</h2><h3>For Personalized Tips</h3></a></div>
+        <div class="schedule"><a href="./Pages/schedule.html"><h2>SCHEDULE NOW</h2><h3>New Pet Consultation</h3></a></div>
     </div>
     <div class="logo">
-        <a href="../index.html">
-            <img src="../Assets/Images/logo.png" alt="Paradigm Pet Professionals - new pet care consultation">
+        <a href="./index.html">
+            <img src="./Assets/Images/logo.png" alt="Paradigm Pet Professionals - new pet care consultation">
         </a>
     </div>
-    <div class="signIn"><a href="../Pages/signin.html">Sign In</a> | <a href="../Pages/contact.html">Contact Us</a></div>
+    <div class="signIn"><a href="./Pages/signin.html">Sign In</a> | <a href="../Pages/contact.html">Contact Us</a></div>
     <div class="slogan">Evidence-based pet care advice for every pet lover</div>
 </header>
