--- a/Components/sidebar.html
+++ b/Components/sidebar.html
@@ -1,13 +1,13 @@
 <section class="sidebar">
     <div class="promotion">
-        <h2><a href="../Pages/schedule.html">Schedule a New Pet Care Consultation Now</a></h2>
-        <img src="../Assets/Images/dog-traning_0.webp" alt="Discount on New Pet Care Consultations">
+        <h2><a href="./Pages/schedule.html">Schedule a New Pet Care Consultation Now</a></h2>
+        <img src="./Assets/Images/dog-traning_0.webp" alt="Discount on New Pet Care Consultations">
         <h3>Schedule NOW and get up to <br /><span>25% OFF</span><br /> your new pet care consultation</h3>
     </div>
     <div class="news">
         <h2>Why Does My Cat Reach His Paw Out to Me?</h2>
         <h3>9 Vet-Verified Reasons</h3>
-        <img src="../Assets/Images/cat-reaching-up.webp" alt="Cat Reaching Up">
+        <img src="./Assets/Images/cat-reaching-up.webp" alt="Cat Reaching Up">
         <p>
             There are several reasons that your cat may reach out to you, whether they are lying 
             down or lightly tapping you with their paw while standing up. As you might imagine, 
