--- a/Components/sidebar-dog.html
+++ b/Components/sidebar-dog.html
@@ -1,6 +1,6 @@
 <section class="sidebar">
     <div class="promotion">
-        <h2><a href="../Pages/schedule.html">Looking For More Specific Dog Care Advice?</a></h2>
+        <h2><a href="./Pages/schedule.html">Looking For More Specific Dog Care Advice?</a></h2>
         <img src="./Assets/Images/baby-dog-tug-o-war.webp" alt="Baby plays tug-o-war with dog">
         <h3>Tell us more about your dog(s)</h3>
         <h3>Get FREE advice tailored for your pets' specific needs</h3>
