--- a/Components/sidebar-fish.html
+++ b/Components/sidebar-fish.html
@@ -1,14 +1,14 @@
 <section class="sidebar">
     <div class="promotion">
-        <h2><a href="../Pages/schedule.html">Looking For More Specific Fish Care Advice?</a></h2>
-        <img src="../Assets/Images/swimming-clownfish.webp" alt="clown fish swimming in anemone">
+        <h2><a href="./Pages/schedule.html">Looking For More Specific Fish Care Advice?</a></h2>
+        <img src="./Assets/Images/swimming-clownfish.webp" alt="clown fish swimming in anemone">
         <h3>Tell us more about your fish</h3>
         <h3>Get FREE advice tailored for your pets' specific needs</h3>
     </div>
     <div class="news">
         <h2>Why Does My Cat Reach His Paw Out to Me?</h2>
         <h3>9 Vet-Verified Reasons</h3>
-        <img src="../Assets/Images/cat-reaching-up.webp" alt="Cat Reaching Up">
+        <img src="./Assets/Images/cat-reaching-up.webp" alt="Cat Reaching Up">
         <p>
             There are several reasons that your cat may reach out to you, whether they are lying 
             down or lightly tapping you with their paw while standing up. As you might imagine, 
