--- a/Components/header.html
+++ b/Components/header.html
@@ -74,6 +74,6 @@
             <img src="./Assets/Images/logo.png" alt="Paradigm Pet Professionals - new pet care consultation">
         </a>
     </div>
-    <div class="signIn"><a href="./Pages/signin.html">Sign In</a> | <a href="../Pages/contact.html">Contact Us</a></div>
+    <div class="signIn"><a href="./Pages/signin.html">Sign In</a> | <a href="./Pages/contact.html">Contact Us</a></div>
     <div class="slogan">Evidence-based pet care advice for every pet lover</div>
 </header>
